# nextjs-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  python-publish.yml
rag_nextjs/: __init__.py  __main__.py  answer.py  cli.py  console_status.py  indexing.py  mcp_docs.py
